--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-config-next": "13.1.2",
     "firebase": "^8.8.1",
     "next": "13.1.2",
-    "next-auth": "^4.18.8",
+    "next-auth": "4.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
